--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@ title: Jonathan Clark
   <div class="recent-comments"><div id="dsq-recentcomments" class="dsq-widget"><span class="dsq-widget-title"></span><script type="text/javascript" src="http://disqus.com/forums/collapsinggeography/recent_comments_widget.js?num_items=3&avatar_size=32&hide_avatars=1"></script></div></div>
 </div>
 -->
+
+<h2>Blog Posts</h2>
+
 <div class="span-14 last">
   {% for post in site.posts limit:5 %}
   <span class="date">{{ post.date | date: "%A, %B %d, %Y" }}</span>
   <div class="title"><a href="{{ post.url }}">{{ post.title }}</a></div>
   {{ post.content }}
-  <div class="comment-link"><a href="{{ post.url }}#disqus_thread">{{ post.title }}</a></div>
+  <!--<div class="comment-link"><a href="{{ post.url }}#disqus_thread">{{ post.title }}</a></div>-->
   {% endfor %}
 </div>
