--- a/blog.html
+++ b/blog.html
@@ -21,5 +21,13 @@ title: Jonathan Clark
 </div>
 -->
 
-<a href="blog.html">Blog</a><br>
-<a href="http://www.cs.cmu.edu/~jhclark">CMU Homepage</a>
+<h2>Blog Posts</h2>
+
+<div class="span-14 last">
+  {% for post in site.posts limit:5 %}
+  <span class="date">{{ post.date | date: "%A, %B %d, %Y" }}</span>
+  <div class="title"><a href="{{ post.url }}">{{ post.title }}</a></div>
+  {{ post.content }}
+  <!--<div class="comment-link"><a href="{{ post.url }}#disqus_thread">{{ post.title }}</a></div>-->
+  {% endfor %}
+</div>
