--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@ title: Jonathan Clark
 </div>
 -->
 
-<a href="blog.html">Blog</a><br>
-<a href="http://www.cs.cmu.edu/~jhclark">CMU Homepage</a>
+
+<ul>
+<li><a href="blog.html">Blog</a><br>
+<li><a href="http://www.cs.cmu.edu/~jhclark">CMU Homepage</a>
+<ul>
+<br><br>
