--- a/_posts/2011-05-26-test.html
+++ b/_posts/2011-05-26-test.html
@@ -1,9 +1,8 @@
 ---
 layout: post
-title: moving blog to github
-excerpt: Trying ex
+title: Moving blog to github
+excerpt: A first experience with Jekyll...
 ---
 
-testing!
+Got tired of syntax highlighting in Blogger. What more is there to say?
 
-http://www.cs.cmu.edu/~jhclark
